# scomeotrope

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  justfile
.github/workflows/: build.yml
docs/: building.md  faust-codegen.md
dsp/: scomeotrope.dsp
scripts/: codegen.py  element_dev.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/components/brand/: TopBar.cpp  TopBar.h
src/components/controls/: PowerButton.h  RotaryKnob.cpp  RotaryKnob.h
src/components/meters/: LedMeter.cpp  LedMeter.h
src/data/: PluginParameters.h  RuntimeParameters.h
src/presets/: PluginPresetManager.cpp  PluginPresetManager.h
src/ui/: PluginLookAndFeel.cpp  PluginLookAndFeel.h  ScomeotropeColors.h
